--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
     <footer>
       <div class="footer">
         <hr />
+          <P>Copyright ╙</P>
         <p>Контакты: +3806805358XX</p>
       </div>
     </footer>
